--- a/_examples/survey/index.html
+++ b/_examples/survey/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/centrifugal/centrifuge-js@master/dist/centrifuge.min.js"></script>
+        <script type="text/javascript" src="https://unpkg.com/centrifuge@3.0.0/dist/centrifuge.js"></script>
         <script type="text/javascript">
             window.addEventListener('load', function() {
                 const container = document.getElementById('messages');
@@ -16,17 +16,21 @@
 
                 const centrifuge = new Centrifuge('ws://' + window.location.host + '/connection/websocket');
 
+                centrifuge.on('connecting', function(ctx){
+                    drawText('Connecting: ' + ctx.reason);
+                });
+
+                centrifuge.on('disconnected', function(ctx){
+                    drawText('Disconnected: ' + ctx.reason);
+                });
+
                 // bind listeners on centrifuge object instance events.
-                centrifuge.on('connect', function(ctx){
+                centrifuge.on('connected', function(ctx){
                     drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport);
                 });
 
-                centrifuge.on('disconnect', function(ctx){
-                    drawText('Disconnected: ' + ctx.reason + (ctx.reconnect?", will try to reconnect":", won't try to reconnect"));
-                });
-
                 // Subscribe to different channels on different example ports.
-                centrifuge.subscribe(window.location.host);
+                centrifuge.newSubscription(window.location.host).subscribe();
 
                 centrifuge.connect();
             });
