--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -7,8 +7,7 @@
             input[type="text"] { width: 300px; }
             .muted {color: #CCCCCC; font-size: 10px;}
         </style>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/centrifugal/centrifuge-js@master/dist/centrifuge.min.js"></script>
+        <script type="text/javascript" src="https://unpkg.com/centrifuge@3.0.0/dist/centrifuge.js"></script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
             const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
@@ -21,28 +20,33 @@
                 const input = document.getElementById("input");
                 const container = document.getElementById('messages');
 
-                const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket', {});
-                // const centrifuge = new Centrifuge('http://localhost:8000/connection/sockjs', {
-                //     sockjsTransports: [
-                //         "xhr-streaming",
-                //     ],
-                // });
+                const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket', {
+                    data: {"user-agent": navigator.userAgent}
+                });
 
-                centrifuge.setConnectData({"user-agent": navigator.userAgent});
+                centrifuge.on('connecting', function(ctx){
+                    drawText('Connecting: ' + ctx.reason);
+                    input.setAttribute('disabled', 'true');
+                });
+
+                centrifuge.on('disconnected', function(ctx){
+                    drawText('Disconnected: ' + ctx.reason);
+                    input.setAttribute('disabled', 'true');
+                });
 
                 // bind listeners on centrifuge object instance events.
-                centrifuge.on('connect', function(ctx){
+                centrifuge.on('connected', function(ctx){
                     drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport + ' with data: ' + JSON.stringify(ctx.data));
                     input.removeAttribute('disabled');
                 });
 
-                centrifuge.on('message', function(data) {
-                    drawText('Message: ' + JSON.stringify(data));
+                centrifuge.on('message', function(ctx) {
+                    drawText('Message: ' + JSON.stringify(ctx.data));
                     // Echo data back to server.
-                    centrifuge.send(data);
+                    centrifuge.send(ctx.data);
                 });
 
-                centrifuge.on('publish', function(ctx) {
+                centrifuge.on('publication', function(ctx) {
                     drawText('Server-side publication from channel ' + ctx.channel + ": " + JSON.stringify(ctx.data));
                 });
 
@@ -54,24 +58,23 @@
                     drawText('Server-side leave from channel ' + ctx.channel + ": " + JSON.stringify(ctx.info));
                 });
 
-                centrifuge.on('subscribe', function(ctx) {
-                    drawText('Subscribe to server-side channel ' + ctx.channel + ' (resubscribed: ' + ctx.isResubscribe + ', recovered: ' + ctx.recovered + ')');
+                centrifuge.on('subscribing', function(ctx) {
+                    drawText('Subscribing on server-side channel ' + ctx.channel);
                 });
 
-                centrifuge.on('unsubscribe', function(ctx) {
+                centrifuge.on('unsubscribed', function(ctx) {
                     drawText('Unsubscribe from server-side channel ' + ctx.channel);
                 });
 
-                centrifuge.on('disconnect', function(ctx){
-                    drawText('Disconnected: ' + ctx.reason  + (ctx.reconnect?", will try to reconnect":", won't try to reconnect"));
-                    input.setAttribute('disabled', 'true');
+                centrifuge.on('subscribed', function(ctx) {
+                    drawText('Subscribe to server-side channel ' + ctx.channel + ': ' + JSON.stringify(ctx));
                 });
 
                 // show how many users currently in channel.
                 function showPresence(sub) {
                     sub.presence().then(function(result) {
                         let count = 0;
-                        for (let key in result.presence){
+                        for (let key in result.clients){
                             count++;
                         }
                         drawText('Presence: now in this room – ' + count + ' clients');
@@ -83,38 +86,44 @@
                 // subscribe on channel and bind various event listeners. Actual
                 // subscription request will be sent after client connects to
                 // a server.
-                const sub = centrifuge.subscribe(channel, handlePublication)
-                        .on("join", handleJoin)
-                        .on("leave", handleLeave)
-                        .on("unsubscribe", handleUnsubscribe)
-                        .on("subscribe", handleSubscribe)
-                        .on("error", handleSubscribeError);
+                const sub = centrifuge.newSubscription(channel);
 
-                showPresence(sub);
+                sub.on("publication", handlePublication)
+                    .on("join", handleJoin)
+                    .on("leave", handleLeave)
+                    .on("unsubscribed", handleUnsubscribed)
+                    .on("subscribed", handleSubscribed)
+                    .on("subscribing", handleSubscribing)
+                    .on("error", handleSubscriptionError);
+
+                sub.subscribe();
 
                 // Trigger actual connection establishing with a server.
                 // At this moment actual client work starts - i.e. subscriptions
                 // defined start subscribing etc.
                 centrifuge.connect();
 
-                function handleSubscribe(ctx) {
-                    drawText('Subscribed on channel ' + ctx.channel + ' (resubscribed: ' + ctx.isResubscribe + ', recovered: ' + ctx.recovered + ', data: ' + JSON.stringify(ctx.data) + ')');
-                    if (ctx.isResubscribe) {
-                        showPresence(sub);
-                    }
+                function handleSubscribed(ctx) {
+                    drawText('Subscribed on channel ' + ctx.channel + ': ' + JSON.stringify(ctx));
+                    showPresence(sub);
 
-                    // This can be whatever JSON you want.
-                    const rpcRequest = {"method": "getCurrentYear"};
-
-                    centrifuge.rpc(rpcRequest).then(function(data){
+                    centrifuge.rpc("getCurrentYear", {}).then(function(data){
                         drawText("RPC response data: " + JSON.stringify(data));
                     }, function(err) {
                         drawText("RPC error: " + JSON.stringify(err));
                     });
                 }
 
-                function handleSubscribeError(err) {
-                    drawText('Error subscribing on channel ' + err.channel + ': ' + err.message);
+                function handleUnsubscribed(ctx) {
+                    drawText('Unsubscribed from channel ' + ctx.channel  + ', ' + JSON.stringify(ctx));
+                }
+
+                function handleSubscribing(ctx) {
+                    drawText('Subscribing on channel ' + ctx.channel  + ', ' + JSON.stringify(ctx));
+                }
+
+                function handleSubscriptionError(ctx) {
+                    drawText('Error subscribing on channel ' + JSON.stringify(ctx));
                 }
 
                 function handlePublication(message) {
@@ -135,10 +144,6 @@
 
                 function handleLeave(ctx) {
                     drawText('Client left channel ' + this.channel + ' (uid ' + ctx.info["client"] + ', user '+ ctx.info["user"] +')');
-                }
-
-                function handleUnsubscribe(ctx) {
-                    drawText('Unsubscribed from channel ' + ctx.channel  + ', ' + JSON.stringify(ctx));
                 }
 
                 function drawText(text) {
