--- a/_examples/jwt_token/index.html
+++ b/_examples/jwt_token/index.html
@@ -7,7 +7,7 @@
             input[type="text"] { width: 300px; }
             .muted {color: #CCCCCC; font-size: 10px;}
         </style>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/centrifugal/centrifuge-js@master/dist/centrifuge.min.js"></script>
+        <script type="text/javascript" src="https://unpkg.com/centrifuge@3.0.0/dist/centrifuge.js"></script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
             const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
@@ -17,59 +17,72 @@
             const channel = "chat";
 
             window.addEventListener('load', function() {
-                const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket');
-
-                fetch('http://localhost:8000/token').then((response) => {
-                    return response.json();
-                }).then((data) => {
-                    centrifuge.setToken(data['token']);
-                    centrifuge.connect();
+                const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket', {
+                    getToken: function() {
+                        return new Promise((resolve, reject) => {
+                            fetch('http://localhost:8000/token')
+                                .then(res => {
+                                    if (!res.ok) {
+                                        throw new Error(`Unexpected status code ${res.status}`);
+                                    }
+                                    return res.json();
+                                })
+                                .then(data => {
+                                    resolve(data.token);
+                                })
+                                .catch(err => {
+                                    reject(err);
+                                });
+                        });
+                    }
                 });
 
                 const input = document.getElementById("input");
                 const container = document.getElementById('messages');
 
+                centrifuge.on('connecting', function(ctx){
+                    drawText('Connecting: ' + ctx.reason);
+                    input.setAttribute('disabled', 'true');
+                });
+
+                centrifuge.on('disconnected', function(ctx){
+                    drawText('Disconnected: ' + ctx.reason);
+                    input.setAttribute('disabled', 'true');
+                });
+
                 // bind listeners on centrifuge object instance events.
-                centrifuge.on('connect', function(ctx){
+                centrifuge.on('connected', function(ctx){
                     drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport);
                     input.removeAttribute('disabled');
                 });
 
-                centrifuge.on('disconnect', function(ctx){
-                    drawText('Disconnected: ' + ctx.reason + (ctx.reconnect?", will try to reconnect":", won't try to reconnect"));
-                    input.setAttribute('disabled', 'true');
-                });
+                const sub = centrifuge.newSubscription(channel);
+                sub.on('publication', handlePublication)
+                    .on("subscribed", handleSubscribed)
+                    .on("error", handleSubscriptionError);
 
-                // subscribe on channel and bind various event listeners. Actual
-                // subscription request will be sent after client connects to
-                // a server.
-                const sub = centrifuge.subscribe(channel, handleMessage)
-                        .on("unsubscribe", handleUnsubscribe)
-                        .on("subscribe", handleSubscribe)
-                        .on("error", handleSubscribeError);
+                sub.subscribe();
 
-                function handleSubscribe(ctx) {
-                    drawText('Subscribed on channel ' + ctx.channel + ' (resubscribed: ' + ctx.isResubscribe + ', recovered: ' + ctx.recovered + ')');
+                centrifuge.connect();
+
+                function handleSubscribed(ctx) {
+                    drawText('Subscribed on channel ' + ctx.channel);
                 }
 
-                function handleSubscribeError(err) {
-                    drawText('Error subscribing on channel ' + err.channel + ': ' + err.message);
+                function handleSubscriptionError(err) {
+                    drawText('Subscription error in channel ' + err.channel + ': ' + err.message);
                 }
 
-                function handleMessage(message) {
+                function handlePublication(ctx) {
                     let clientID;
-                    if (message.info){
-                        clientID = message.info.client;
+                    if (ctx.info){
+                        clientID = ctx.info.client;
                     } else {
                         clientID = null;
                     }
-                    const inputText = message.data["input"].toString();
+                    const inputText = ctx.data["input"].toString();
                     const text = safeTagsReplace(inputText) + ' <span class="muted">from ' + clientID + '</span>';
                     drawText(text);
-                }
-
-                function handleUnsubscribe(sub) {
-                    drawText('Unsubscribed from channel ' + sub.channel);
                 }
 
                 function drawText(text) {
